[gd_scene load_steps=69 format=2]

[ext_resource path="res://enemies/abyss_archer.gd" type="Script" id=1]
[ext_resource path="res://enemies/hurt_V2.gd" type="Script" id=2]
[ext_resource path="res://enemie_sprites/Skeletron/Shield.png" type="Texture" id=3]
[ext_resource path="res://enemie_sprites/Skeletron/Idle.png" type="Texture" id=4]
[ext_resource path="res://enemie_sprites/Dark_Seletron/attack3.png" type="Texture" id=5]
[ext_resource path="res://enemie_sprites/Skeletron/Take Hit.png" type="Texture" id=6]
[ext_resource path="res://enemie_sprites/Boss8/allanimation-Sheet.png" type="Texture" id=7]
[ext_resource path="res://enemie_sprites/Arcane archer/spritesheet.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.2413
height = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=266]
atlas = ExtResource( 9 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=189]
atlas = ExtResource( 7 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=190]
atlas = ExtResource( 7 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=191]
atlas = ExtResource( 7 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 7 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=267]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=268]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=269]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=270]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=271]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=272]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=273]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=274]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=275]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=276]
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=277]
atlas = ExtResource( 9 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=278]
atlas = ExtResource( 9 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=279]
atlas = ExtResource( 9 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=280]
atlas = ExtResource( 9 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=281]
atlas = ExtResource( 9 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=282]
atlas = ExtResource( 9 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=259]
atlas = ExtResource( 9 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=260]
atlas = ExtResource( 9 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=261]
atlas = ExtResource( 9 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=262]
atlas = ExtResource( 9 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=263]
atlas = ExtResource( 9 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=264]
atlas = ExtResource( 9 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=265]
atlas = ExtResource( 9 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=193]
atlas = ExtResource( 7 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=194]
atlas = ExtResource( 7 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=195]
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 7 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 7 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=198]
atlas = ExtResource( 7 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=199]
atlas = ExtResource( 7 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=200]
atlas = ExtResource( 7 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=201]
atlas = ExtResource( 7 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=202]
atlas = ExtResource( 7 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=203]
atlas = ExtResource( 7 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=204]
atlas = ExtResource( 7 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="SpriteFrames" id=61]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 266 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Shoot",
"speed": 8.0
}, {
"frames": [ SubResource( 189 ), SubResource( 190 ), SubResource( 191 ), SubResource( 192 ) ],
"loop": false,
"name": "Attack3",
"speed": 12.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Take_Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 267 ), SubResource( 268 ), SubResource( 269 ), SubResource( 270 ), SubResource( 271 ), SubResource( 272 ), SubResource( 273 ), SubResource( 274 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Shield",
"speed": 5.0
}, {
"frames": [ SubResource( 275 ), SubResource( 276 ), SubResource( 277 ), SubResource( 278 ), SubResource( 279 ), SubResource( 280 ), SubResource( 281 ), SubResource( 282 ) ],
"loop": false,
"name": "Death",
"speed": 12.0
}, {
"frames": [ SubResource( 259 ), SubResource( 260 ), SubResource( 261 ), SubResource( 262 ), SubResource( 263 ), SubResource( 264 ), SubResource( 265 ) ],
"loop": false,
"name": "Attack",
"speed": 12.0
}, {
"frames": [ SubResource( 193 ), SubResource( 194 ), SubResource( 194 ), SubResource( 194 ), SubResource( 194 ), SubResource( 195 ), SubResource( 196 ), SubResource( 197 ), SubResource( 197 ), SubResource( 197 ), SubResource( 198 ), SubResource( 199 ), SubResource( 199 ), SubResource( 199 ), SubResource( 200 ), SubResource( 201 ), SubResource( 202 ), SubResource( 203 ), SubResource( 204 ) ],
"loop": false,
"name": "Attack2",
"speed": 12.0
} ]

[node name="archer" type="KinematicBody2D" groups=["coa", "enemy", "need_player_ref"]]
position = Vector2( 0, 1 )
scale = Vector2( 4, 4 )
z_index = 10
collision_layer = 12
script = ExtResource( 1 )

[node name="hurt_V2" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="right1" type="CollisionPolygon2D" parent="hurt_V2"]

[node name="right1b" type="CollisionPolygon2D" parent="hurt_V2"]
position = Vector2( -2.35407, -51.151 )
scale = Vector2( 1.05466, 1.82548 )

[node name="left1" type="CollisionPolygon2D" parent="hurt_V2"]

[node name="left1b" type="CollisionPolygon2D" parent="hurt_V2"]
position = Vector2( 0, -51.151 )
scale = Vector2( 1, 2.5779 )

[node name="right3" type="CollisionPolygon2D" parent="hurt_V2"]
polygon = PoolVector2Array( 5.70672, 15.7883, 12.2141, -4.40119, 9.79467, -13.5782, -13.4816, -13.0777, -16.1513, -1.89837, -15.5673, 16.2054 )

[node name="left3" type="CollisionPolygon2D" parent="hurt_V2"]
position = Vector2( -2.987, 0 )
polygon = PoolVector2Array( 10.8083, 16.4611, 15.4687, -4.83511, 13.522, -14.5098, -11.746, -14.5793, -13.1643, -2.06522, -9.66033, 15.7883 )

[node name="left2" type="CollisionPolygon2D" parent="hurt_V2"]
polygon = PoolVector2Array( -7.35696, 12.6939, -17.6054, 11.2223, -24.3852, -0.287476, -18.7091, -15.0557, -7.25189, -18.7872, 5.04622, -14.2148, 8.67263, -5.75331 )

[node name="left2b" type="CollisionPolygon2D" parent="hurt_V2"]

[node name="right2b" type="CollisionPolygon2D" parent="hurt_V2"]

[node name="right2" type="CollisionPolygon2D" parent="hurt_V2"]
polygon = PoolVector2Array( 16.5169, 9.5703, 4.63923, 13.3543, -9.3558, 9.88651, -10.6906, 1.3769, -11.6006, -4.8826, -5.66176, -15.8668, 15.4658, -15.7617, 22.5083, -3.67381 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Shoot" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Collision_Right" type="CollisionShape2D" parent="."]
position = Vector2( -0.134, -0.028 )
scale = Vector2( 0.467, 0.861 )
shape = SubResource( 1 )

[node name="Collision_Left" type="CollisionShape2D" parent="."]
position = Vector2( -2.25, -0.028 )
scale = Vector2( 0.467, 0.861 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1.1666, 9.09141 )
scale = Vector2( 0.324866, 0.425788 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.35443, 0.838337 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 61 )
animation = "Attack"
frame = 6
playing = true

[node name="top" type="Node2D" parent="."]
position = Vector2( -0.33371, 22.6922 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 31

[node name="muzzle" type="Node2D" parent="."]

[node name="left" type="Node2D" parent="muzzle"]
position = Vector2( -11.4053, 0.216066 )

[node name="right" type="Node2D" parent="muzzle"]
position = Vector2( 11.7793, 0.150659 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
